checkingModify successSubtitle in config.json
Updated the success subtitle text in config.json.

--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "yesButtonText": "YES ❤️",
     "noButtonText": "NO 💔",
     "successMessage": "💖 YAYYYYY!!! 💖",
-    "successSubtitle": "That's the best decision My Sweet Potato❤️😘",
+    "successSubtitle": "That's the best decision My Sweet Potato..❤️😘",
     "giftsTitle": "💝 Your Valentine Gifts 💝",
     "giftsSubtitle": "Click here for the Valentine gifts, Potato",
     "songsTitle": "Our Love Sounds Like This!🎵",
